[feat] add enrollment api adapted for DePhy EVM contract
